# GP5-Plugin

./: .gitignore  .gitmodules  Adagio.gp5  Adagio.mid  After.gp5  CMakeLists.txt  Clocks_Track3.mid  Comfortably 4.gp5  LICENSE  NewProject.jucer  README.md  Recording.gp5  Recording_fixed.gp5  Unknown.ptb  analyze_gp5.py  analyze_recording.py  before.gp5  build_log.txt  build_out.txt  check_gp_internals.py  check_gp_read.py  check_harmonic.py  check_pack_flags.py  check_velocity.py  check_velocity2.py  compare_before_after.py  compare_bytes.py  compare_measures.py  compare_structures.py  create_reference.py  debug_all_measures.py  debug_channels.py  debug_compare_files.py  debug_compare_structure.py  debug_crash_position21.py  debug_exact_parse.py  debug_find_chord.py  debug_full_gp5_parse.py  debug_full_parse.py  debug_gp5_bytes.py  (+43 more)
.copilot/: workspace-notes.md
Source/: AudioToMidiProcessor.cpp  AudioToMidiProcessor.h  AudioTranscriber.cpp  AudioTranscriber.h  ChordFingerDB.h  ChordMatcher.h  ExportPanelComponent.h  FretPositionCalculator.h  GP5Dump.cpp  GP5Parser.cpp  GP5Parser.h  GP5Writer.cpp  GP5Writer.h  GP5Writer_backup.cpp  GP7Parser.cpp  GP7Parser.h  MidiExpressionEngine.h  MidiImporter.h  NoteEditComponent.h  PTBParser.cpp  PTBParser.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  TabLayoutEngine.h  TabModels.h  TabRenderer.h  TabViewComponent.h  TrackSettingsComponent.h
Source/BasicPitch/: Features.cpp  NoteUtils.h  Notes.cpp  Notes.h  Resampler.h
installer/: GP5_VST_Editor.iss
releases/alpha-0.4/: CHANGELOG.txt
releases/alpha-0.5/: CHANGELOG.txt
releases/alpha-0.6/: CHANGELOG.txt
releases/alpha-0.7/: CHANGELOG.txt
releases/alpha-0.8/: CHANGELOG.txt
